--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "uiconfig-tweakpane",
   "name:umd": "tpui",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Tweakpane wrapper and custom components for web controls UI. To be used with uiconfig.js",
   "main": "src/index.ts",
   "module": "src/index.ts",
@@ -67,7 +67,7 @@
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-terser": "^0.4.0",
     "@rollup/plugin-typescript": "^11.0.0",
-    "@tweakpane/core": "^1.1.4",
+    "@tweakpane/core": "^1.1.8",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "clean-package": "^2.2.0",
     "eslint": "^8.34.0",
@@ -79,14 +79,23 @@
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-license": "^3.0.1",
     "rollup-plugin-multi-input": "^1.3.3",
-    "ts-browser-helpers": "^0.2.0",
+    "ts-browser-helpers": "^0.5.0",
     "tslib": "^2.5.0",
-    "tweakpane": "^3.1.4",
+    "tweakpane": "^3.1.9",
     "typescript": "^4.9.5",
     "typedoc": "^0.23.26"
   },
   "dependencies": {
-    "uiconfig.js": "^0.0.2"
+    "uiconfig.js": "^0.0.4",
+    "@types/three": "^0.152.1"
+  },
+  "//": {
+    "dependencies": {
+      "uiconfig.js": "^0.0.4"
+    },
+    "local_dependencies": {
+      "uiconfig.js": "file:./../uiconfig/"
+    }
   },
   "optionalDependencies": {
     "win-node-env": "^0.6.1"
