Use vite instead of rollup, update to typescript 5, update to uiconfig v0.1.0, add support for undo, add basic examples for testing.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,12 +8,13 @@
         "module": "es2015",
         "noImplicitAny": true,
         "declaration": true,
+        "skipLibCheck": true,
         "noImplicitThis": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "removeComments": true,
         "preserveConstEnums": true,
-        "moduleResolution": "node",
+        "moduleResolution": "Bundler",
         "emitDecoratorMetadata": true,
         "sourceMap": true,
         "target": "es6",
