--- a/package.json
+++ b/package.json
@@ -1,25 +1,41 @@
 {
   "name": "uiconfig-tweakpane",
   "name:umd": "tpui",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "Tweakpane wrapper and custom components for web controls UI. To be used with uiconfig.js",
-  "main": "src/index.ts",
-  "module": "src/index.ts",
-  "types": "src/index.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "browser": "dist/index.js",
+  "types": "dist/index.d.ts",
   "source": "src/index.ts",
   "sideEffects": false,
   "scripts": {
-    "new:pack": "npm run prepare && clean-package && npm pack; clean-package restore",
-    "new:publish": "npm run prepare && clean-package && npm publish; clean-package restore",
-    "build": "rimraf dist && NODE_ENV=production rollup -c",
-    "dev": "rollup -c -w",
+    "build": "vite build",
+    "start": "vite",
+    "dev": "NODE_ENV=development vite build --watch",
+    "test": "npm run check",
+
+    "prepare": "npm run build && npm run docs",
     "docs": "npx typedoc ./src/index.ts",
     "serve-docs": "ws -d docs -p 8080",
-    "prepare": "npm run build && npm run docs",
-    "build-examples": "NODE_ENV=production rollup --config examples/rollup.config.mjs",
-    "dev-examples": "rollup -w --config examples/rollup.config.mjs",
     "serve": "ws",
-    "lint": "eslint src examples --fix"
+    "lint": "eslint src examples --fix",
+    "check": "tsc -p tsconfig.json --noEmit && eslint src examples",
+    "prepublishOnly": "npm run test",
+
+    "new:pack": "npm run prepare && clean-package && npm pack; clean-package restore",
+    "new:publish": "git diff --exit-code --name-only HEAD * && npm run prepare && clean-package && npm publish && clean-package restore && git tag v$npm_package_version"
+  },
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    },
+    "./dist/": {
+      "import": "./dist/",
+      "require": "./dist/"
+    }
   },
   "clean-package": {
     "remove": [
@@ -27,13 +43,7 @@
       "scripts",
       "devDependencies",
       "optionalDependencies"
-    ],
-    "replace": {
-      "main": "dist/index.js",
-      "module": "dist/index.mjs",
-      "browser": "dist/index.js",
-      "types": "dist/index.d.ts"
-    }
+    ]
   },
   "files": [
     "dist",
@@ -62,40 +72,36 @@
   },
   "homepage": "https://github.com/repalash/uiconfig-tweakpane#readme",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-terser": "^0.4.0",
-    "@rollup/plugin-typescript": "^11.0.0",
-    "@tweakpane/core": "^1.1.8",
-    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@rollup/plugin-replace": "^6.0.2",
+    "@tweakpane/core": "^1.1.9",
+    "@typescript-eslint/eslint-plugin": "^8.18.1",
     "clean-package": "^2.2.0",
-    "eslint": "^8.34.0",
-    "eslint-plugin-deprecation": "^1.3.3",
-    "eslint-plugin-html": "^7.1.0",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint": "^8.57.1",
+    "eslint-plugin-deprecation": "^3.0.0",
+    "eslint-plugin-html": "^8.1.2",
+    "eslint-plugin-import": "^2.31.0",
     "local-web-server": "^5.3.0",
-    "rollup": "^3.17.2",
-    "rollup-plugin-delete": "^2.0.0",
+    "rimraf": "^5.0.1",
     "rollup-plugin-license": "^3.0.1",
-    "rollup-plugin-multi-input": "^1.3.3",
-    "ts-browser-helpers": "^0.5.0",
+    "ts-browser-helpers": "^0.16.0",
     "tslib": "^2.5.0",
-    "tweakpane": "^3.1.9",
-    "typescript": "^4.9.5",
-    "typedoc": "^0.23.26",
-    "rimraf": "^5.0.1"
+    "tweakpane": "^3.1.10",
+    "typedoc": "^0.27.5",
+    "typescript": "^5.7.2",
+    "vite": "^5.4.11",
+    "vite-plugin-dts": "^4.4.0"
   },
   "dependencies": {
-    "uiconfig.js": "^0.0.9",
-    "@types/three": "^0.152.1"
+    "@types/three": "^0.152.1",
+    "uiconfig.js": "^0.1.1"
   },
   "//": {
     "dependencies": {
-      "uiconfig.js": "^0.0.8"
+      "uiconfig.js": "^0.1.0"
     },
     "local_dependencies": {
-      "uiconfig.js": "file:./../uiconfig/"
+      "uiconfig.js": "file:./../uiconfig.js/"
     }
   },
   "optionalDependencies": {
